@@ -13,6 +13,9 @@
      o) sort SEE ALSO;
 
      aaron@ ok
+   - provos@cvs.openbsd.org 2001/06/22 21:27:08
+     [dh.c pathnames.h]
+     use /etc/moduli instead of /etc/primes, okay markus@
 
 20010622
  - (stevesk) handle systems without pw_expire and pw_change.
@@ -5697,4 +5700,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1299 2001/06/25 04:10:54 mouring Exp $
+$Id: ChangeLog,v 1.1300 2001/06/25 04:13:25 mouring Exp $
